<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus non lacinia lorem. Mauris tincidunt, massa ac vehicula sodales, nibh nunc lacinia mauris, mollis dignissim orci lacus vel quam. </string>
    <string name="welcome">Welcome!</string>
    <string name="next">Next</string>
    <string name="instructions">Instructions</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_shoe">Add Shoe</string>
    <string name="instructions_text">Add new shoe to the list:\n1. Click + button on the Shoe List scree\n2.Fill name, company, size and description of the shoe\n3. Click Save</string>
</resources>
