<?xml version="1.0" encoding="utf-8"?><!-- This layout is extremely simple, so LinearLayout would offer better performance -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".InstructionsFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/instructions"
        android:textAlignment="center"
        android:textSize="24sp" />

    <!--TODO: Fill with instructions-->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMargin"
        android:text="@string/lorem_ipsum"
        android:textSize="16sp" />

    <Button
        android:id="@+id/nextButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/defaultMargin"
        android:text="@string/next" />
</LinearLayout>